# hass-aula

./: .devcontainer.json  .gitignore  .ruff.toml  CLAUDE.md  README.md  SPEC.md  hacs.json  mypy.ini  prek.toml  pyproject.toml  requirements.txt
.claude/skills/update-aula-api-docs/: SKILL.md
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: lint.yml  release.yml  test.yml  validate.yml
config/: configuration.yaml
custom_components/aula/: __init__.py  binary_sensor.py  calendar.py  client.py  config_flow.py  const.py  coordinator.py  data.py  diagnostics.py  icons.json  manifest.json  qr_view.py  sensor.py
custom_components/aula/translations/: da.json  en.json
custom_components/hass_aula/: __init__.py  binary_sensor.py  calendar.py  config_flow.py  const.py  coordinator.py  data.py  diagnostics.py  entity.py  icons.json  manifest.json  qr_view.py  quality_scale.yaml  sensor.py  strings.json  token_manager.py
custom_components/hass_aula/translations/: da.json  en.json
docs/: aula-package-api.md
scripts/: check_translations  develop  release  setup  test
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_calendar.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_manifest.py  test_notifications.py  test_sensor.py  test_token_manager.py
