[project]
name = "hass-aula"
version = "1.0.0"
description = "Aula integration for Home Assistant"
requires-python = ">=3.13"
dependencies = [
    "colorlog==6.10.1",
    "homeassistant==2026.1.3",
    "aula==0.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.3",
    "pytest-homeassistant-custom-component",
]
